--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,14 +1,14 @@
-title: "My True Blogs Name"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "noVa/64"
+author: "Dani Molina"
+description: "noVa/64 computer development diary." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
-twitter_username: "twitteruser"
-github_username: "githubuser"
-linkedin_username: "linkedinuser"
-#facebook_username: username
+email: "nova64@mail.com"
+twitter_username: "nnn"
+github_username: "nnn"
+linkedin_username: "nnn"
+facebook_username: "nnn"
 #flickr_username: username
 #instagram_username: username
 #pinterest_username: username
