--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
-title: "noVa/64"
+title: "noVa64"
 author: "Dani Molina"
-description: "noVa/64 computer development diary." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "noVa64 computer development diary." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
