--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,6 +5,8 @@ author:
 
 description: "noVa64 computer development diary." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
+show_excerpts: "yes"
+
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 twitter_username: "nnn"
