--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 title: "noVa64"
 author: 
    name: "Dani Molina"
-   email: "nova64@mail.com"
+   email: "dmolina+nova64@gmail.com"
 
 description: "noVa64 computer development diary." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
