--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,16 +3,16 @@ author:
    name: "Dani Molina"
    email: "dmolina+nova64@gmail.com"
 
-description: "noVa64 computer development diary." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "noVa64 development diary" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 show_excerpts: "yes"
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-twitter_username: "nnn"
-github_username: "nnn"
-linkedin_username: "nnn"
-facebook_username: "nnn"
+#twitter_username: "nnn"
+#github_username: "nnn"
+#linkedin_username: "nnn"
+#facebook_username: "nnn"
 #flickr_username: username
 #instagram_username: username
 #pinterest_username: username
