Trying to fix social URLs

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,7 +23,7 @@ show_excerpts: "yes"
 ######### Nothing below needs to be changed (unless you know what you're doing) #########
 #########################################################################################
 theme: "minima"
-
+baseurl: "nova64"
 rss: rss
 
 kramdown:
