--- a/C/WDCDB.INI
+++ b/C/WDCDB.INI
@@ -24,15 +24,15 @@ chunk size=0x400
 number of defs=1
 mem01=0x0,0x1FFFF,RAM
 [Windows]
-Num=9
-Wind01=code,845,12,1080,657,0
-Wind02=modules,2,290,577,260,0
-Wind03=code,845,12,1080,657,0
-Wind04=locals,135,779,601,200,0
-Wind05=watches,5,559,400,200,0
-Wind06=data,956,679,851,290,0,0x000009D2,0
-Wind07=data,238,680,851,290,0,0x00001FF0,0
-Wind08=status,0,0,579,282,0
+Num=8
+Wind01=modules,2,290,577,260,0
+Wind02=code,845,12,1080,657,0
+Wind03=locals,135,779,601,200,0
+Wind04=watches,5,559,400,200,0
+Wind05=data,956,679,851,290,0,0x000009D2,0
+Wind06=data,238,680,851,290,0,0x00001FF0,0
+Wind07=status,0,0,579,282,0
+Wind08=register,7,744,122,179,0
 Wind09=register,7,744,122,179,0
 [Main Window]
 x=-8
